# synchronization_using_mutex_locks

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  p3
include/: Car.hpp  Edge.hpp  Graph.hpp  Path.hpp  Polution.hpp  Record.hpp  utils.hpp
res/: 0-0.txt  0-1.txt  0-2.txt  1-0.txt  1-1.txt  1-2.txt  1-3.txt
src/: Car.cpp  Edge.cpp  Graph.cpp  Path.cpp  Polution.cpp  Record.cpp  main.cpp  utils.cpp
